--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,50 @@
 name: Cypress Tests
 
 on: 
-push: 
-workflow_dispatch:
+  push: 
+  workflow_dispatch:
 
 jobs:
   cypress-run:
     runs-on: ubuntu-24.04
     strategy:
-          fail-fast: false
-          matrix:
-              browsers:[chrome, firefox, edge]
+      fail-fast: false
+      matrix:
+        browsers: [chrome, firefox, edge]
+
     steps:
+      # Step 1: Checkout the repo
       - name: Checkout
         uses: actions/checkout@v4
-      # Install npm dependencies, cache them correctly
-      # and run all Cypress tests
+
+      # Step 2: Setup Node.js
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+
+      # Step 3: Install dependencies
+      - name: Install dependencies
+        run: npm install
+
+      # Step 4: Run Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-            browsers: ${{matrix.gebrowsers}}
-            command: npx cypress run -browser ${{matrix.browsers}} -- reporter mochawesome --reporter-options reportDir=cypress/reports/${{matrix.browsers}}
-        
--name: Merge mochawesome Reports
-run: npx Merge cypress/reports/${{matrix.browsers}}/*.json > cypress/reports/${{matrix.browsers}}/Merged-reports.json
+          browsers: ${{ matrix.browsers }}
+          command: npx cypress run --browser ${{ matrix.browsers }} --reporter mochawesome --reporter-options reportDir=cypress/reports/${{ matrix.browsers }},overwrite=false,html=false,json=true
 
--name: Generate HTML Reports
-run: npx Merge cypress/reports/${{matrix.browsers}}/Merged-reports.json --reportDir cypress/reports/${{matrix.browsers}} -f "${{matrix.browsers}}"-report.HTML
+      # Step 5: Merge Mochawesome reports
+      - name: Merge Mochawesome Reports
+        run: npx mochawesome-merge cypress/reports/${{ matrix.browsers }}/*.json > cypress/reports/${{ matrix.browsers }}/merged-report.json
 
--name: upload HTML Reports
-uses: actions/upload-artifact@v4
-with:
-      name: cypress HTML Report ${{matrix.browsers}}
-      path: cypress/reports/${{matrix.browsers}}
+      # Step 6: Generate HTML report
+      - name: Generate HTML Report
+        run: npx marge cypress/reports/${{ matrix.browsers }}/merged-report.json --reportDir cypress/reports/${{ matrix.browsers }} -f "${{ matrix.browsers }}-report.html"
+
+      # Step 7: Upload HTML report
+      - name: Upload HTML Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: cypress-html-report-${{ matrix.browsers }}
+          path: cypress/reports/${{ matrix.browsers }}
