--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "cypress.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules\\.bin\\cypress run",
+    "runtests": "npm run test --"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ghost",
   "license": "ISC",
   "devDependencies": {
     "cypress": "^15.7.1",
